test/compile_errors/err_let_else_else_must_diverge.w
//! expect-error: let ... else requires a diverging else branch

fn main:
    let opt: Option[i32] = None
    let Some(v) = opt else: 0
    let _x = v
